--- a/neural-architecture-search/requirements.txt
+++ b/neural-architecture-search/requirements.txt
@@ -57,6 +57,7 @@ opt-einsum==3.2.1
 pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.7.0
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.1.2
